syntax = "proto3";

option java_package = "com.order.generated";
option java_outer_classname = "OrderItemProtobuf"; // 고유 클래스 이름 설정
// 주문 아이템 정보
message OrderItem {
int64 menuId = 1;                 // 메뉴 ID
string menuName = 2;              // 메뉴 이름
bool stockAvailableAtOrder = 3;  // 주문 시 재고 여부
int32 quantity = 4;               // 수량
int64 price = 5;                  // 총 금액 (단가 * 수량)
}

